@@ -80,6 +80,12 @@ Version 0.7.5 UNRELEASED
 
   * Add function to get the candidate version of a package
 
+  * Use Boost::Filesystem for some file-related operations
+
+    C++ Filesystem TS is derived from it not approved yet, and the support from
+    compilers is not great.  When support is good, the switch should be almost
+    automatic.
+
 - Documentation:
 
   * manpage:
